version shi